[package]
name = "wfpm"
version = "0.1.0"
authors = ["Piano Nekomiya<kotone.olin1010@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/nsk-1010/wfpm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow
tokyo
reqwest
helix